# TAFFO

./: .gitignore  CMakeLists.txt  README.md  enrollment_email.txt
.github/workflows/: taffo-build-and-test.yml
cmake/: FindClangFormat.cmake  TaffoFetchDeps.cmake  TaffoOptions.cmake
doc/: CommandLineReference.md  Makefile  donut_ranges_design.md  report.md  report.tex
lib/TaffoConversion/: ValueConvInfoBuilder.cpp
test/: CMakeLists.txt  test-runner.py
test/0_simple/type-function/: type-function.c
test/0_simple/type-simple/: type-simple.c
test/donut_ranges/: CMakeLists.txt  README.md  donut_annotated.c  donut_arith_test.cpp  donut_array.c  donut_microbench.cpp  donut_mlp.c  donut_phi.c  donut_range_selftest.cpp  end_to_end_results.txt  mlp_results.txt  run_donut_annotated.sh  run_donut_mlp.sh  verify_activation_bounds.py
test/polybench-cpu/linear-algebra/blas/gemm/: gemm.c
test/polybench-cpu/linear-algebra/blas/gemver/: gemver.c
test/polybench-cpu/linear-algebra/blas/syr2k/: syr2k.c
test/polybench-cpu/linear-algebra/blas/syrk/: syrk.c
test/polybench-cpu/linear-algebra/kernels/doitgen/: doitgen.c
test/polybench-cpu/linear-algebra/kernels/mvt/: mvt.c
test/polybench/linear-algebra/blas/gesummv/: gesummv.c
test/polybench/linear-algebra/blas/trmm/: trmm.c
test/polybench/linear-algebra/kernels/2mm/: 2mm.c
test/polybench/linear-algebra/kernels/3mm/: 3mm.c
test/polybench/linear-algebra/kernels/atax/: atax.c
test/polybench/linear-algebra/kernels/bicg/: bicg.c
test/polybench/stencils/jacobi-1d/: jacobi-1d.c
test/polybench/stencils/jacobi-2d/: jacobi-2d.c
test/polybench/stencils/seidel-2d/: seidel-2d.c
test/vra/algorithm/: config.h  run.py
test/vra/algorithm/affine_basic/: affine_basic.c
test/vra/algorithm/affine_crossing/: affine_crossing.c
test/vra/algorithm/affine_delta/: affine_delta.c
test/vra/algorithm/affine_flattened/: affine_flattened.c
test/vra/algorithm/affine_flattened_2D/: affine_flattened_2D.c
test/vra/algorithm/affine_flattened_S/: affine_flattened_S.c
test/vra/algorithm/affine_flattened_T/: affine_flattened_T.c
test/vra/algorithm/affine_fmuladd/: affine_fmuladd.c
test/vra/algorithm/fake_affine_flattened/: fake_affine_flattened.c
test/vra/algorithm/fake_with_affine/: fake_with_affine.c
test/vra/algorithm/fallback/: fallback.c
test/vra/algorithm/geo_basic/: geo_basic.c
test/vra/algorithm/geo_crossing/: geo_crossing.c
test/vra/algorithm/geo_delta/: geo_delta.c
test/vra/algorithm/geo_flattened/: geo_flattened.c
test/vra/algorithm/geo_flattened_S/: geo_flattened_S.c
test/vra/algorithm/geo_flattened_T/: geo_flattened_T.c
test/vra/algorithm/interprocedural/: interprocedural.c
test/vra/algorithm/linear_rec/: linear_rec.c
test/vra/array1D/crossing_affine/: crossing_affine.c
test/vra/unit/: affine_rec_soundness.cpp  fake_rec_soundness.cpp  geo_rec_soundness.cpp  lin_rec_soundness.cpp
(+35 files in other folders)
